Bug when editing/previewing ad on mobile #2796

--- a/resources/less/frontend/modules/submit-listing-page.less
+++ b/resources/less/frontend/modules/submit-listing-page.less
@@ -99,6 +99,10 @@
         margin-top: 12px;
         padding-top: 2px;
 
+        .adviewed + a {
+            pointer-events: none;
+        }
+
         .awpcp-classifieds-search-bar, .awpcp-classifieds-menu {
             display: none;
         }
